<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/newbackground"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image_logo"
        app:srcCompat="@drawable/dicee_logo"
        android:contentDescription="@string/casino_logo"

        android:scaleType="centerInside"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottomLogo"

        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"/>


    <ImageView
        android:id="@+id/image_leftDice"
        app:srcCompat="@drawable/dice4"
        android:contentDescription="@string/right_dice_image"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginEnd="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_rightDice"

        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/image_rightDice"
        app:srcCompat="@drawable/dice1"
        android:contentDescription="@string/left_dice_image"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="20dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toEndOf="@+id/image_leftDice"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        />

    <Button
        android:id="@+id/rollButton"
        android:contentDescription="@string/press_to_roll"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:text="@string/roll"
        android:textColor="@color/white"
        style="@style/Widget.AppCompat.Button.Colored"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottomLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>


</androidx.constraintlayout.widget.ConstraintLayout>